# multitool-office-ai

./: .gitignore  README.md  pyproject.toml
src/multitool_office_ai/: __init__.py  client.py  config.py
src/multitool_office_ai/agents/: __init__.py  supervisor_agent.py
src/multitool_office_ai/bots/: __init__.py  base.py  feishu.py
src/multitool_office_ai/bots/feishu/: __init__.py  actuator.py  bot.py  client.py  config.py
src/multitool_office_ai/core/: logging_config.py
tests/: test_client.py  test_feishu_bot.py
